Aks/YamlFiles/nginx-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
spec:
  selector:
    matchLabels:
      app: website
  replicas: 1
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website2
          image: "mcr.microsoft.com/dotnet/samples:aspnetapp"
          ports:
            - containerPort: 80
              protocol: TCP
        - name: website
          imagePullPolicy: Always
          image: nginx:latest
          ports:
            - containerPort: 8443
          volumeMounts:
            - mountPath: /etc/nginx/ssl
              name: secret-volume
            - mountPath: /etc/nginx/conf.d
              name: configmap-volume
      volumes:
        - name: secret-volume
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-keylzasecsdevbxuks1"
        - name: configmap-volume
          configMap:
            name: website-nginx-cm
---
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  selector:
    app: website
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
