Aks/YamlFiles/aspnetapp-ingress-agw.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnetapp
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/backend-protocol: "https"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: frontend
    appgw.ingress.kubernetes.io/backend-hostname: "web1.sbx-aks.databasejoe.com"
    appgw.ingress.kubernetes.io/appgw-trusted-root-certificate: "backendroot"
spec:
  tls:
    - secretName: frontend
      hosts:
        - web1.sbx-aks.databasejoe.com
  rules:
    - host: web1.sbx-aks.databasejoe.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: website-service
                port:
                  number: 8443
            pathType: Exact
